# soma-observe

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODOS.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
dashboard/: Cargo.toml  index.html
dashboard/src/: api.rs  app.rs  main.rs  util.rs
dashboard/src/pages/: alerts.rs  dashboards.rs  kubernetes.rs  logs.rs  metrics.rs  mod.rs  overview.rs  retention.rs  services.rs  traces.rs
deploy/obi/: beyla-config.yml  docker-compose.yml  frontend.conf  k8s-daemonset.yaml
docs/: competitive-analysis.md  ebpf-obi.md  install-design.md  kubernetes.md  roadmap.md
migrations/: migration-order.yaml
migrations/00_setup/: 01_schema.sql
migrations/01_migrated/1/: 20260628_01_init.sql
migrations/01_migrated/2/: 20260629_01_spans.sql
migrations/01_migrated/3/: 20260629_02_alerts.sql
migrations/01_migrated/4/: 20260629_03_exemplars.sql
migrations/01_migrated/5/: 20260629_04_dashboards.sql
src/: admin.rs  auth.rs  config.rs  dashboards.rs  install.rs  main.rs  portal.rs  state.rs
src/alerts/: eval.rs  mod.rs  notify.rs
src/ingest/: mod.rs  otlp_http.rs
src/query/: kubernetes.rs  logs.rs  metrics.rs  mod.rs  services.rs  traces.rs
src/store/: mod.rs  partition.rs  schema.rs  series.rs  write.rs
