[package]
name = "soma-observe-dashboard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.dev]
debug = "line-tables-only"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
soma-ui = { path = "../../soma-ui/web/packages/ui" }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Element", "HtmlElement", "Node", "HtmlSpanElement", "Clipboard", "Navigator", "Storage"] }
